@@ -23,7 +23,7 @@ END
 CLIENT
 _EXEC ./sleep.sh 55 1>/dev/null
 _SLEEP 7100
-_EXPECT EXEC "mod_qos\(200\): { \"scoreboard\": { \"open\": 896, \"waiting\": 128, \"read\": 0, \"write\": 0, .*{ \"max\": 256, \"busy\": 0 }, \"clientContentTypes\": { \"html\": 2, \"css/js\": 0, \"images\": 1, \"other\": 0, \"304\": 0 } }"
+_EXPECT EXEC "mod_qos\(200\): { \"scoreboard\": { \"open\": 896, \"waiting\": 128, \"read\": 0, \"write\": 0, .*{ \"max\": 256, \"busy\": 0, \"QS_AllConn\": 0 }, \"clientContentTypes\": { \"html\": 2, \"css/js\": 0, \"images\": 1, \"other\": 0, \"304\": 0 } }"
 
 _MATCH EXEC " ([0-9]+:[0-9]+:[0-9]+) " DATE
 _EXEC grep "mod_qos(200)" logs/error_log | tail -1
